Fix tab title on Safari [WEB-3301]

--- a/frontend/scss/organisms/_o-tabbed-details.scss
+++ b/frontend/scss/organisms/_o-tabbed-details.scss
@@ -25,6 +25,7 @@
         display: grid;
         grid-column: calc(var(--tab) + 1) / span 1;
         grid-row: 1;
+        width: 100%;
         z-index: 1;
     }
 
